# SAETASS

./: .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  .readthedocs.yaml  AdvectionFVSolver.py  AdvectionFVSolverv2.py  AdvectionSolver.py  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DiffusionFVSolver.py  DiffusionSolver.py  GiovanniConvergenceTest.py  GiovanniDomainTest.py  GiovanniLossesRealtime.py  GiovanniLossesRealtimeVideo.py  GiovanniLossesTest.py  GiovanniTest.py  Grid.py  HyperbolicFVSolver.py  LICENSE  LossFVSolver.py  LossSolver.py  Operator.py  PINN.py  README.md  Solver.py  SourceSolver.py  SplittingScheme.py  State.py  SubproblemSolver.py  dense_molecular_cloud_test.py  giovanni_profiles.py  hyperbolic_solver.py  multiEnergyGiovanniTest.py  nonUniformGiovanniTest.py  pinn_poisson_1d.pth  pyproject.toml  solver.py  (+5 more)
.github/workflows/: ci.yml  publish.yml  tests.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  foundations.rst  index.rst  installation.rst  introduction.rst  references.bib  references.rst  terms.rst  tutorials.rst  users_guide.rst
docs/source/_static/: .gitignore  custom.css  sequence_diagram.mmd
docs/source/api/: grid.rst  index.rst  solvers.rst  splitting.rst  state.rst  utils.rst
docs/source/examples/: 01_multi_energy_diffusion.rst  index.rst
docs/source/tutorials/: index.rst
examples/: 01_multi_energy_diffusion.py  README.md
src/saetass/: __init__.py  grid.py  operator.py  solver.py  splitting.py  state.py  subproblem_solver.py
src/saetass/cli/: __init__.py  banner.py  palette.py  progress.py
src/saetass/solvers/: __init__.py  advection_solver.py  diffusion_solver.py  hyperbolic_solver.py  loss_solver.py  source_solver.py
src/saetass/utils/: __init__.py  bubble_profiles.py  energy_losses.py  giovanni_profiles.py
test/: advection_test.py  deb.py  diffussion_test.py  loss_test.py  momentum_test.py  test_advection.py  test_deb.py  test_diffussion.py  test_giovanni_profiles.py  test_loss.py  test_multiple_operator.py  test_time_dependence.py  untitled.py
tutorials/: 01_grids_and_states.ipynb  02_running_simulations.ipynb  03_physics_features.ipynb  04_energy_losses.ipynb
unit_test/: conftest.py  test_advection.py  test_diffussion.py  test_multiple_operator.py  test_time_dependence.py
validation/: AdvV2Validation1.py  AdvValidation1.py  AdvValidation2.py  AdvValidation3.py  DiffValidation1.py  DiffValidation2.py  DiffValidation3.py  DiffValidation4.py  DiffValidation5.py  LossValidation1.py  LossValidation2.py  plot_style.py
validation/cases/: advection_gaussian_shell.py  advection_pointlike_source.py  advection_variable_velocity.py  diffusion_advection_validation.py  diffusion_analytic_evolution.py  diffusion_source_steady_state.py  loss_source_steady_state.py  time_dependent_advection.py  time_dependent_diffusion.py
