[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SAETASS"
version = "0.1.0"
description = "A scientific computing package for solving astroparticle transport equation using operator splitting methods and a finite volume approach."
authors = [
    {name = "J. M. G. Morillo", email = "jmorillo@iaa.es"}
    ]
requires-python = ">=3.10"

dependencies = [
    "numpy>=2.3.0",
    "scipy>=1.16.2",
    "astropy>=7.1.0",
    "numba>=0.62.0",
    "rich>=13.0.0"
    ]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0"
    ]
plotting = [
    "matplotlib>=3.8.0"
    ]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["unit_test"]
addopts = "-ra"